# rust_reversi

./: Cargo.toml  LICENSE.txt  README.md
src/: board.rs  lib.rs  main.rs  piece_type.rs  point.rs  tile.rs  tile_type.rs
